--- a/src/app/reservations/reservations.component.html
+++ b/src/app/reservations/reservations.component.html
@@ -1,38 +1,28 @@
-<div class="flex flex-col items-center h-screen space-y-10 pt-24">
-  <h1 class="font-bold text-6xl">Reserveringen</h1>
-  <div class="w-full px-36">
-    <table class="table-auto w-full">
-      <thead class="bg-gray-50 h-16">
-      <tr class="text-left text-xl">
-        <th class="pl-2">Reservering</th>
-        <th>Tijd</th>
-        <th>Type</th>
-        <th>Locatie</th>
-        <th class="pl-5">Actie</th>
-      </tr>
-      </thead>
-      <tbody class="divide-y divide-gray-100">
-      <tr class="text-left text-xl h-16 text-gray-800">
-        <td class="pl-2">Apr 19, 2024</td>
-        <td>10:10</td>
-        <td>Lokaal</td>
-        <td>Gebouw Amsterdam</td>
-        <td><button (click)="openDeleteModal()"
-                    class="font-bold py-1 px-4 rounded-full bg-primary-red text-white hover:bg-red-700">Annuleer</button></td>
-      </tr>
-      <tr class="text-left text-xl h-16 text-gray-800">
-        <td class="pl-2">Apr 19, 2024</td>
-        <td>10:10</td>
-        <td>Lokaal</td>
-        <td>Gebouw Amsterdam</td>
-        <td><button (click)="openDeleteModal()"
-          class=" font-bold py-1 px-4 rounded-full bg-primary-red text-white hover:bg-red-700">Annuleer</button></td>
-      </tr>
-      </tbody>
-    </table>
+<article class="rounded-lg p-4 border-2 border-secondary-purple-light space-y-4 mb-5">
+  <div class="flex justify-between items-center">
+    <h2 class="text-xl font-semibold">Aankomende reserveringen</h2>
   </div>
-  @if (isDeleteModalVisible){
-    <app-delete-modal (closeModalEvent)="openDeleteModal()"
-    ></app-delete-modal>
-  }
-</div>
+  <ul class="space-y-4">
+    <li class="flex justify-between flex-row items-center p-4 border-2 border-secondary-purple-light rounded-lg" *ngFor="let reservation of reservations">
+      <div>
+        <h3 class="font-bold">{{ reservation.startDateTime | date:'longDate' }}</h3>
+        <p>Tijd: {{ reservation.startDateTime | date:'shortTime' || "Onbekende startdatum" }}</p>
+        <p>Locatie: {{ reservation.location.wing.floor.building.name || "Onbekende locatie" }}</p>
+      </div>
+      <div class="flex flex-col space-y-2 md:space-y-4">
+      <button [routerLink]="'/reservation/details/' + reservation.id" class="flex bg-secondary-purple-light p-2 rounded-lg space-x-2 hover:bg-gray-300 duration-300">
+        <p>Meer info</p>
+        <lucide-icon name="move-right"></lucide-icon>
+      </button>
+      <button (click)="openDeleteModal()" class="flex bg-red-300 p-2 rounded-lg space-x-2 hover:bg-red-500 duration-300">
+        <p>Annuleer Afspraak</p>
+        <lucide-icon name="ban"></lucide-icon>
+      </button>
+    </div>
+    @if (isDeleteModalVisible){
+      <app-delete-modal (closeModalEvent)="openDeleteModal()" class="fixed inset-0 z-50 duration-300 backdrop-blur-sm" [reservation]="reservation"
+      ></app-delete-modal>
+    }
+    </li>
+  </ul>
+</article>
