Fix: Added redirect link to reservations after success message

--- a/src/app/shared/utilities/reserve-success/reserve-success.component.html
+++ b/src/app/shared/utilities/reserve-success/reserve-success.component.html
@@ -45,4 +45,6 @@
       />
     </g>
   </svg>
+  <h1>Ga naar <span routerLink="/reservations"
+    class="text-secondary-purple underline hover:text-secondary-dark-pink cursor-pointer">Reserveringen</span></h1>
 </section>
