--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,11 +16,12 @@
   <ul class="h-full justify-evenly flex flex-row flex-wrap gap-8 md:flex-col md:list-none">
     <app-navbar-item path="/home" icon="home" label="Home" [collapsed]="collapsed"></app-navbar-item>
     <app-navbar-item path="/calendar" icon="calendar-days" label="Agenda" [collapsed]="collapsed"></app-navbar-item>
+    <app-navbar-item path="/create-reservation" icon="calendar-plus" label="Nieuwe reservering" [collapsed]="collapsed">Reservering toevoegen</app-navbar-item>
     <app-navbar-item path="/reservations" icon="building-2" label="Mijn reserveringen" [collapsed]="collapsed"></app-navbar-item>
-    <app-navbar-item path="/reports" icon="line-chart" label="Rapportage dashboard" [collapsed]="collapsed"></app-navbar-item>
-    <app-navbar-item path="/manage/locations" icon="door-open" label="Werkplekken beheren" [collapsed]="collapsed"></app-navbar-item>
-    <app-navbar-item path="/users" icon="user" label="Gebruikers" [collapsed]="collapsed" *ngIf="isAdmin"></app-navbar-item>
     <app-navbar-item path="/favorites" icon="heart" label="Mijn favorieten" [collapsed]="collapsed"></app-navbar-item>
+    <app-navbar-item path="/reports" icon="line-chart" label="Rapportage dashboard" [collapsed]="collapsed" *ngIf="isAdmin"></app-navbar-item>
+    <app-navbar-item path="/manage/locations" icon="door-open" label="Werkplekken beheren" [collapsed]="collapsed" *ngIf="isAdmin"></app-navbar-item>
+    <app-navbar-item path="/users" icon="user" label="Gebruikers" [collapsed]="collapsed" *ngIf="isAdmin"></app-navbar-item>
     <app-navbar-item class="mt-auto" path="" icon="circle-user-round" label="Profiel" [collapsed]="collapsed"></app-navbar-item>
     <li class="whitespace-nowrap">
       <a (click)="signout()" class="hidden md:flex md:space-x-4 cursor-pointer">
