--- a/src/app/manage-locations/location/location.component.html
+++ b/src/app/manage-locations/location/location.component.html
@@ -1,11 +1,11 @@
 <li class="pl-1 bg-gradient-to-b from-primary-red to-primary-dark-purple rounded-lg border-2 border-secondary-purple-light w-full mb-2">
   <div *ngIf="!location.isEdit; else edit" class="flex w-full justify-between bg-white rounded-md p-4">
-    <p class="min-w-[100px]">{{ location.name }}</p>
-    <p class="min-w-[100px]">{{ location.type }}</p>
-    <p class="min-w-[100px]">{{ location.wing.floor.building.name }}</p>
-    <p class="min-w-[100px]">{{ location.wing.floor.number }}.{{ location.wing.name }}</p>
-    <p class="min-w-[100px]">{{ location.capacity }}</p>
-    <p class="min-w-[100px]">{{ location.createdAt | date:'shortDate' }}</p>
+    <p class="min-w-[150px]">{{ location.name }}</p>
+    <p class="min-w-[150px]">{{ location.type }}</p>
+    <p class="min-w-[150px]">{{ location.wing.floor.building.name }}</p>
+    <p class="min-w-[150px]">{{ location.wing.floor.number }}.{{ location.wing.name }}</p>
+    <p class="min-w-[150px]">{{ location.capacity }}</p>
+    <p class="min-w-[150px]">{{ location.createdAt | date:'shortDate' }}</p>
     <div class="flex space-x-5 ">
       <button (click)="location.isEdit = true">
         <lucide-icon name="pencil" title="bewerken"></lucide-icon>
@@ -18,18 +18,30 @@
 
   <ng-template #edit>
     <form [formGroup]="locationForm" (ngSubmit)="onSubmitForm()" class="flex w-full justify-between bg-white rounded-md p-4">
-      <input type="text" id="locationName" formControlName="locationName" class="w-[100px]">
-      <select name="locationType" id="locationType"
-        formControlName="locationType" class="w-[100px]">
+      <input type="text" id="locationName" formControlName="locationName" class="w-[150px] p-2 rounded-lg border-2 border-secondary-purple-light">
+      <div class="relative w-[150px]">
+        <select name="locationType" id="locationType"
+        formControlName="locationType" class=" appearance-none p-2 rounded-lg border-2 border-secondary-purple-light w-full">
           <option *ngFor="let type of locationTypes" [ngValue]="type">{{ type }}</option>
-      </select>
-      <p class="min-w-[100px]">{{ location.wing.floor.building.name }}</p>
-      <select name="wing" id="wing" formControlName="wing" class="w-[100px]" >
-        <option [ngValue]="location.wing">{{ location.wing.floor.number }}.{{ location.wing.name }}</option>
-        <option *ngFor="let wing of wings" [ngValue]="wing">{{ wing.floor.number }}.{{ wing.name }}</option>
-      </select>
-      <input type="number" id="capacity" formControlName="capacity" class="w-[100px]">
-      <p class="w-[100px]">{{ location.createdAt | date:'shortDate' }}</p>
+        </select>
+        <div class="absolute right-2 top-1/2 transform -translate-y-1/2">
+          <lucide-icon name="chevron-down"></lucide-icon>
+        </div>
+      </div>
+      
+      <p class="w-[150px] p-2">{{ location.wing.floor.building.name }}</p>
+      <div class="relative w-[150px]">
+        <select name="wing" id="wing" formControlName="wing" class="w-full p-2 rounded-lg border-2 border-secondary-purple-light appearance-none" >
+          <option [ngValue]="location.wing">{{ location.wing.floor.number }}.{{ location.wing.name }}</option>
+          <option *ngFor="let wing of wings" [ngValue]="wing">{{ wing.floor.number }}.{{ wing.name }}</option>
+        </select>
+        <div class="absolute right-2 top-1/2 transform -translate-y-1/2">
+          <lucide-icon name="chevron-down"></lucide-icon>
+        </div>
+      </div>
+      
+      <input type="number" id="capacity" formControlName="capacity" class="w-[150px] p-2 rounded-lg border-2 border-secondary-purple-light">
+      <p class="w-[150px] p-2">{{ location.createdAt | date:'shortDate' }}</p>
       <div class="flex space-x-5 ">
         <button type="submit" id="save">
           <lucide-icon name="save" title="Opslaan"></lucide-icon>
