--- a/src/app/manage-locations/manage-locations.component.html
+++ b/src/app/manage-locations/manage-locations.component.html
@@ -1,11 +1,17 @@
 <article class="flex flex-col h-full w-full space-y-6">
   <h1 class="w-min whitespace-nowrap text-3xl font-bold">Werkplekken beheren</h1>
   <section class="flex w-full justify-between">
+    <div class="relative w-1/3">
+      <div class="absolute inset-y-0 start-0 flex items-center ps-2 pointer-events-none">
+        <lucide-icon name="search" class="w-5 h-5 text-gray-500"></lucide-icon>
+      </div>
     <input 
-    [(ngModel)]="searchQuery"
-    type="text"
-    placeholder="Zoek op naam..."
-    class="w-1/3 h-[40px] p-2 border-2 border-secondary-purple-light rounded-lg focus:outline-none focus:border-primary-dark-purple drop-shadow-sm">
+      [(ngModel)]="searchQuery"
+      type="text"
+      placeholder="Zoek op naam of type..."
+      class="block w-full p-2 ps-10 text-gray-900 border-2 border-secondary-purple-light rounded-lg bg-gray-50 focus:ring-primary-dark-purple focus:border-primary-dark-purple duration-300">
+  </div>
+    
     <div class="flex space-x-2">
       <div class="flex space-x-2 items-center">
         <label for="building">Locatie:</label>
