--- a/src/app/reservation/create-reservation/meeting-room-step/meeting-room-step.component.html
+++ b/src/app/reservation/create-reservation/meeting-room-step/meeting-room-step.component.html
@@ -1,17 +1,19 @@
-<section class="flex pl-5 justify-between w-full font-bold">
-  <p class="min-w-[100px]">Naam</p>
-  <p class="min-w-[100px]">Type</p>
-  <p class="min-w-[100px]">Gebouw</p>
-  <p class="min-w-[100px]">Vleugel</p>
-  <p class="min-w-[100px]">Capaciteit</p>
-  <p class="min-w-[100px]">Beschikbaarheid</p>
-</section>
-<ul class="h-[500px] overflow-auto">
-  @for (location of displayedMeetingRooms; track location){
-    <app-meeting-room-unit (click)="toggleSelected(location);"
-      [location]="location"></app-meeting-room-unit>
-  }
-</ul>
+<table class="w-full">
+  <tr class="flex pl-5 justify-start w-full text-left font-bold">
+    <th class="min-w-[150px]">Naam</th>
+    <th class="min-w-[150px]">Type</th>
+    <th class="min-w-[150px]">Gebouw</th>
+    <th class="min-w-[150px]">Vleugel</th>
+    <th class="min-w-[150px]">Capaciteit</th>
+    <th class="min-w-[150px]">Beschikbaarheid</th>
+  </tr>
+  <tr class="h-[500px] overflow-auto">
+    @for (location of displayedMeetingRooms; track location){
+      <app-meeting-room-unit (click)="toggleSelected(location);"
+                             [location]="location"></app-meeting-room-unit>
+    }
+  </tr>
+</table>
 <mat-paginator [length]="length"
                [pageSize]="pageSize"
                [pageSizeOptions]="pageSizeOptions"
