--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="flex justify-center items-center h-screen bg-gray-100 login-container">
-  <div class="max-sm:flex-row border border-black flex w-[700px] h-[500px] shadow-lg rounded-lg overflow-hidden login-box">
+  <div class="md:flex-row md:border border-black flex w-[700px] h-[500px] md:shadow-lg md:rounded-lg overflow-hidden login-box">
     <div class="bg-gradient-to-b from-pink-500 to-blue-600 text-white flex justify-center items-center w-1/3 text-7xl p-8 font-semibold logo-section">
       CGI
     </div>
-    <div class="flex flex-col justify-center bg-white w-2/3 p-8 form-section">
+    <div class="flex flex-col justify-center bg-white w-full p-8 form-section">
       <form (ngSubmit)="onSubmit()">
         <div class="mb-4">
           <label for="username" class="block">Gebruikersnaam</label>
@@ -14,7 +14,7 @@
           <input type="password" id="password" [(ngModel)]="password" name="password" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:border-blue-600" required>
           <a class="text-sm text-gray-600 mt-2 cursor-pointer" routerLink="/reset-password">Wachtwoord vergeten?</a>
         </div>
-        <button type="submit" class="w-full text-white p-2 rounded cursor-pointer bg-purple-800 hover:bg-purple-900">Login</button>
+        <button type="submit" class="w-full text-white p-2 rounded cursor-pointer bg-purple-800 hover:bg-purple-900 align-bottom">Login</button>
       </form>
     </div>
   </div>
