--- a/src/app/reservation-details/reservation-details.component.html
+++ b/src/app/reservation-details/reservation-details.component.html
@@ -1,4 +1,4 @@
-<div class="md:container md:mx-auto h-full">
+<div class="md:container md:mx-auto h-full p-4 md:p-0">
   <article
     class="rounded-lg p-4 border-2 border-slate-300 bg-secondary-purple-light space-y-4 mb-5 flex flex-col md:flex-row md:space-y-0 md:space-x-4 justify-center content-center gap-8"
   >
