Refactor: refactored code to use methods for setting current time

--- a/src/app/reservation/create-reservation/date-and-time-step/date-and-time-step.component.html
+++ b/src/app/reservation/create-reservation/date-and-time-step/date-and-time-step.component.html
@@ -15,7 +15,7 @@
   <section>
     <h1 class="text-xl font-extrabold">Selecteer eindtijd:</h1>
     <div class="ngx-timepicker-field-example">
-      <ngx-timepicker-field [format]="24" [defaultTime]="currentTime" [(ngModel)]="endTime"></ngx-timepicker-field>
+      <ngx-timepicker-field [format]="24" [defaultTime]="currentTime + 1" [(ngModel)]="endTime"></ngx-timepicker-field>
     </div>
   </section>
   <div class="w-full flex justify-center items-center space-x-4">
