Refactor + Fix: updated code to be more readable and fixed some layout issues

--- a/src/app/reservation/create-reservation/create-reservation.component.html
+++ b/src/app/reservation/create-reservation/create-reservation.component.html
@@ -38,7 +38,7 @@
                              (selectedMeetingRoom)="addSelectedLocation($event)" #step5
       ></app-meeting-room-step>
     </mat-step>
-    @if (allAssignedMeetingRoom | async) {
+    @if (allMeetingRoomFieldsAssigned | async) {
       <mat-step>
         <ng-template matStepLabel>Reservering bevestigen</ng-template>
         <app-verify-reservation-step
@@ -52,7 +52,7 @@
       </mat-step>
     }
   }
-  @if (allAssignedWorkplace | async) {
+  @if (allWorkplaceFieldsAssigned | async) {
     <mat-step>
       <ng-template matStepLabel>Reservering bevestigen</ng-template>
       <app-verify-reservation-step
