--- a/src/app/reservation/create-reservation/verify-reservation-step/verify-reservation-step.component.html
+++ b/src/app/reservation/create-reservation/verify-reservation-step/verify-reservation-step.component.html
@@ -20,12 +20,13 @@
       flex items-center justify-center"
       (click)="makeReservation()" [disabled]="isLoading">
       @if (!isLoading){
-        <span class="font-medium text-[#333] group-hover:text-white">Bevestig</span>
+        <span class="font-medium text-black group-hover:text-white">Bevestig</span>
+      } @else {
+        <svg class="animate-spin h-5 w-5 text-primary-dark-purple group-hover:text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+          <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+          <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 2.042.66 3.93 1.77 5.449l2.23-1.158z"></path>
+        </svg>
       }
-      <svg *ngIf="isLoading" class="animate-spin h-5 w-5 text-primary-dark-purple group-hover:text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 2.042.66 3.93 1.77 5.449l2.23-1.158z"></path>
-      </svg>
     </button>
   </section>
 </section>
