--- a/src/app/manage-locations/location/location.component.html
+++ b/src/app/manage-locations/location/location.component.html
@@ -7,10 +7,10 @@
     <p class="min-w-[150px]">{{ location.capacity }}</p>
     <p class="min-w-[150px]">{{ location.createdAt | date:'shortDate' }}</p>
     <div class="flex space-x-5 ">
-      <button (click)="location.isEdit = true">
+      <button id="editLocation" (click)="location.isEdit = true">
         <lucide-icon name="pencil" title="bewerken"></lucide-icon>
       </button>
-      <button (click)="deletionDialog.show()">
+      <button id="deleteButton" (click)="deletionDialog.show()">
         <lucide-icon name="trash-2" title="verwijderen"></lucide-icon>
       </button>
     </div>
@@ -65,7 +65,7 @@
         <p>Weet je zeker dat je de locatie wilt verwijderen?</p>
       </div>
       <div class="flex space-x-4">
-        <button class="rounded-lg p-2 text-white bg-primary-red" (click)="onDelete()">Verwijder</button>
+        <button id="deleteConfirmation" class="rounded-lg p-2 text-white bg-primary-red" (click)="onDelete()">Verwijder</button>
         <button class="border-2 border-secondary-purple-light rounded-lg p-2" (click)="deletionDialog.close()">Annuleer</button>
       </div>
     </div>
