--- a/src/app/reservation/create-reservation/verify-reservation-step/verify-reservation-step.component.html
+++ b/src/app/reservation/create-reservation/verify-reservation-step/verify-reservation-step.component.html
@@ -8,7 +8,7 @@
   <section class="w-full flex justify-center">
     <button
       class="w-40 h-12 bg-white cursor-pointer rounded-2xl border-2 border-primary-dark-purple
-      shadow-[inset_0px_-2px_0px_1px_#5236AA] group hover:bg-primary-dark-purple transition duration-300 ease-in-out
+      shadow-custom-inset group hover:bg-primary-dark-purple transition duration-300 ease-in-out
       flex items-center justify-center"
       (click)="makeReservation()" [disabled]="isLoading">
       @if (!isLoading){
