style: cleaned up the design of the users page

--- a/src/app/users/user-item/user-item.component.html
+++ b/src/app/users/user-item/user-item.component.html
@@ -1,5 +1,5 @@
-<li class="pl-1 bg-gradient-to-b from-primary-red to-primary-dark-purple rounded-lg border-2 border-secondary-purple-light">
-  <div class="flex w-full justify-between bg-white rounded-md p-4">
+<li class="pl-1 bg-gradient-to-b from-primary-red to-primary-dark-purple rounded-lg border-2 border-secondary-purple-light w-full mb-2">
+  <div class="flex w-full bg-white rounded-md p-4">
     <p class="w-1/4">{{ user!.firstName + " " + user!.lastName }}</p>
     <p class="w-1/4">{{ user!.email }}</p>
     <p class="w-1/4">{{ user!.phoneNumber }}</p>
