--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -7,7 +7,7 @@
     <input 
       [(ngModel)]="searchInput"
       type="text"
-      placeholder="Zoek op naam of type..."
+      placeholder="Zoek een gebruiker..."
       class="block w-full p-2 ps-10 text-gray-900 border-2 border-secondary-purple-light rounded-lg bg-gray-50 focus:ring-primary-dark-purple focus:border-primary-dark-purple duration-300"
     >
   </section>
