--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,12 +1,14 @@
-<form [formGroup]="personSelectForm" (ngSubmit)="onSubmitForm()" class="flex w-full justify-between bg-white rounded-md p-4">
+<form [formGroup]="personSelectForm" (ngSubmit)="onSubmitForm()"
+      class="flex w-full justify-between bg-white rounded-md p-4">
   <div class="flex flex-col space-y-2">
     <label for="favourite-user">Kies een collega:</label>
-    <select name="favourite-user" id="favourite-user" class="border-2 border-secondary-purple-light rounded-lg p-2" formControlName="favourite-user" (change)="onChangePerson()">
-      <option *ngFor="let person of favoriteColleagues" [ngValue]="person">{{ person.firstName + " " + person.lastName }}</option>
+    <select name="favourite-user" id="favourite-user" class="border-2 border-secondary-purple-light rounded-lg p-2"
+            formControlName="favourite-user" (change)="onChangePerson()">
+      <option *ngFor="let person of favoriteColleagues"
+              [ngValue]="person">{{ person.firstName + " " + person.lastName }}</option>
     </select>
   </div>
 </form>
-
 
 
 <div class='h-full'>
