--- a/src/app/home/default-location/default-location.component.html
+++ b/src/app/home/default-location/default-location.component.html
@@ -1,7 +1,8 @@
 <div class="rounded-lg p-4 border-2 border-secondary-purple-light space-y-2 ">
   <div class="flex justify-between items-center">
     <h2 class="text-xl font-semibold">Standaard locatie</h2>
-    <button *ngIf="defaultLocation" class="bg-primary-dark-purple text-white p-2 rounded-lg hover:bg-purple-950 duration-300" [routerLink]='"/create-reservation"'>Reserveer</button>
+    <button *ngIf="defaultLocation" class="bg-primary-dark-purple text-white p-2 rounded-lg hover:bg-purple-950 duration-300"
+            [routerLink]='"/create-reservation"' [state]="{ location: defaultLocation }">Reserveer</button>
   </div>
   <div *ngIf="defaultLocation">
     <h3>Locatie: {{ defaultLocation.floor.building.name }}</h3>
