--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,7 +37,7 @@ html {
 }
 
 .fc-header-toolbar.fc-toolbar.fc-toolbar-ltr .fc-button.fc-button-primary.fc-button-active {
-  @apply bg-secondary-purple border-none outline-none shadow-none;
+  @apply bg-primary-dark-purple border-none outline-none shadow-none;
 }
 
 .fc .fc-button-primary:focus{
@@ -64,7 +64,7 @@ html {
 }
 
 .fc .fc-toolbar.fc-header-toolbar{
-  @apply flex flex-col-reverse md:flex-row;
+  @apply flex flex-col-reverse space-y-2  md:space-y-0 md:flex-row;
 }
 
 //Styling for the timepicker
